// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`NodeVisualization rendered structure bonded-lldp, with neighbours shown 1`] = `
{
  "edges": [
    "200,180 -> 260,180  solid  lldp",
    "200,280 -> 260,280  solid  lldp",
    "200,380 -> 260,380  solid  lldp",
    "200,480 -> 260,480  solid  lldp",
    "200,580 -> 260,580  solid  lldp",
    "200,80 -> 260,80  solid  lldp",
    "420,180 -> 480,80  solid  controller",
    "420,280 -> 480,180  solid  controller",
    "420,380 -> 480,180  solid  controller",
    "420,480 -> 480,280  solid  controller",
    "420,580 -> 480,280  solid  controller",
    "420,80 -> 480,80  solid  controller",
    "640,180 -> 700,180  solid  controller",
    "640,80 -> 700,80  solid  controller",
    "860,180 -> 920,1080  dashed  bridge-mapping",
    "860,180 -> 920,1180  dashed  bridge-mapping",
    "860,180 -> 920,1280  dashed  bridge-mapping",
    "860,180 -> 920,1380  dashed  bridge-mapping",
    "860,180 -> 920,1480  dashed  bridge-mapping",
    "860,180 -> 920,1580  dashed  bridge-mapping",
    "860,180 -> 920,1680  dashed  bridge-mapping",
    "860,180 -> 920,1780  dashed  bridge-mapping",
    "860,180 -> 920,180  dashed  bridge-mapping",
    "860,180 -> 920,1880  dashed  bridge-mapping",
    "860,180 -> 920,1980  dashed  bridge-mapping",
    "860,180 -> 920,2080  dashed  bridge-mapping",
    "860,180 -> 920,2180  dashed  bridge-mapping",
    "860,180 -> 920,2280  dashed  bridge-mapping",
    "860,180 -> 920,2380  dashed  bridge-mapping",
    "860,180 -> 920,2480  dashed  bridge-mapping",
    "860,180 -> 920,2580  dashed  bridge-mapping",
    "860,180 -> 920,2680  dashed  bridge-mapping",
    "860,180 -> 920,2780  dashed  bridge-mapping",
    "860,180 -> 920,280  dashed  bridge-mapping",
    "860,180 -> 920,380  dashed  bridge-mapping",
    "860,180 -> 920,480  dashed  bridge-mapping",
    "860,180 -> 920,580  dashed  bridge-mapping",
    "860,180 -> 920,680  dashed  bridge-mapping",
    "860,180 -> 920,780  dashed  bridge-mapping",
    "860,180 -> 920,880  dashed  bridge-mapping",
    "860,180 -> 920,980  dashed  bridge-mapping",
    "860,80 -> 920,80  dashed  bridge-mapping",
  ],
  "laneHeaders": [
    "LLDP Neighbors",
    "Physical Interfaces",
    "Bonds",
    "Bridges",
    "Bridge Mappings",
    "Attachments",
    "Other Interfaces",
  ],
  "nodes": [
    {
      "fill": "#666",
      "labels": [
        "lo",
        "loopback",
        "up",
      ],
      "title": "lo (loopback)",
      "x": 0,
      "y": 0,
    },
    {
      "fill": "#0066CC",
      "labels": [
        "ens5f0np0",
        "ethernet",
        "up",
      ],
      "title": "ens5f0np0 (ethernet)",
      "x": 260,
      "y": 140,
    },
    {
      "fill": "#0066CC",
      "labels": [
        "ens2f1np1",
        "ethernet",
        "up",
      ],
      "title": "ens2f1np1 (ethernet)",
      "x": 260,
      "y": 240,
    },
    {
      "fill": "#0066CC",
      "labels": [
        "ens5f1np1",
        "ethernet",
        "up",
      ],
      "title": "ens5f1np1 (ethernet)",
      "x": 260,
      "y": 340,
    },
    {
      "fill": "#0066CC",
      "labels": [
        "ens2f0np0",
        "ethernet",
        "up",
      ],
      "title": "ens2f0np0 (ethernet)",
      "x": 260,
      "y": 40,
    },
    {
      "fill": "#0066CC",
      "labels": [
        "ens2f2np2",
        "ethernet",
        "up",
      ],
      "title": "ens2f2np2 (ethernet)",
      "x": 260,
      "y": 440,
    },
    {
      "fill": "#0066CC",
      "labels": [
        "ens5f2np2",
        "ethernet",
        "up",
      ],
      "title": "ens5f2np2 (ethernet)",
      "x": 260,
      "y": 540,
    },
    {
      "fill": "#0066CC",
      "labels": [
        "ens2f3np3",
        "ethernet",
        "down",
      ],
      "title": "ens2f3np3 (ethernet)",
      "x": 260,
      "y": 640,
    },
    {
      "fill": "#0066CC",
      "labels": [
        "ens5f3np3",
        "ethernet",
        "down",
      ],
      "title": "ens5f3np3 (ethernet)",
      "x": 260,
      "y": 740,
    },
    {
      "fill": "#2E7D32",
      "labels": [
        "lab-fabric-lf002",
        "LLDP",
        "Local: ens5f0np0 · Port: Eth1/22",
      ],
      "title": "lab-fabric-lf002 (LLDP)",
      "x": 40,
      "y": 140,
    },
    {
      "fill": "#2E7D32",
      "labels": [
        "lab-fabric-lf001",
        "LLDP",
        "Local: ens2f1np1 · Port: Eth1/23",
      ],
      "title": "lab-fabric-lf001 (LLDP)",
      "x": 40,
      "y": 240,
    },
    {
      "fill": "#2E7D32",
      "labels": [
        "lab-fabric-lf002",
        "LLDP",
        "Local: ens5f1np1 · Port: Eth1/23",
      ],
      "title": "lab-fabric-lf002 (LLDP)",
      "x": 40,
      "y": 340,
    },
    {
      "fill": "#2E7D32",
      "labels": [
        "lab-fabric-lf001",
        "LLDP",
        "Local: ens2f0np0 · Port: Eth1/22",
      ],
      "title": "lab-fabric-lf001 (LLDP)",
      "x": 40,
      "y": 40,
    },
    {
      "fill": "#2E7D32",
      "labels": [
        "lab-fabric-lf001",
        "LLDP",
        "Local: ens2f2np2 · Port: Eth1/24",
      ],
      "title": "lab-fabric-lf001 (LLDP)",
      "x": 40,
      "y": 440,
    },
    {
      "fill": "#2E7D32",
      "labels": [
        "lab-fabric-lf002",
        "LLDP",
        "Local: ens5f2np2 · Port: Eth1/24",
      ],
      "title": "lab-fabric-lf002 (LLDP)",
      "x": 40,
      "y": 540,
    },
    {
      "fill": "#663399",
      "labels": [
        "bond1",
        "bond",
        "up",
      ],
      "title": "bond1 (bond)",
      "x": 480,
      "y": 140,
    },
    {
      "fill": "#663399",
      "labels": [
        "bond2",
        "bond",
        "up",
      ],
      "title": "bond2 (bond)",
      "x": 480,
      "y": 240,
    },
    {
      "fill": "#663399",
      "labels": [
        "bond0",
        "bond",
        "up",
      ],
      "title": "bond0 (bond)",
      "x": 480,
      "y": 40,
    },
    {
      "fill": "#FF6600",
      "labels": [
        "ovs-vm",
        "ovs-bridge",
        "up",
      ],
      "title": "ovs-vm (ovs-bridge)",
      "x": 700,
      "y": 140,
    },
    {
      "fill": "#FF6600",
      "labels": [
        "br-ex",
        "ovs-bridge",
        "up",
      ],
      "title": "br-ex (ovs-bridge)",
      "x": 700,
      "y": 40,
    },
    {
      "fill": "#009900",
      "labels": [
        "tenant-b-db",
        "OVN Bridge Mapping",
        "Bridge: ovs-vm",
      ],
      "title": "tenant-b-db (OVN Bridge Mapping)",
      "x": 920,
      "y": 1040,
    },
    {
      "fill": "#009900",
      "labels": [
        "tenant-b-web",
        "OVN Bridge Mapping",
        "Bridge: ovs-vm",
      ],
      "title": "tenant-b-web (OVN Bridge Mapping)",
      "x": 920,
      "y": 1140,
    },
    {
      "fill": "#009900",
      "labels": [
        "tenant-c-app-processing",
        "OVN Bridge Mapping",
        "Bridge: ovs-vm",
      ],
      "title": "tenant-c-app-processing (OVN Bridge Mapping)",
      "x": 920,
      "y": 1240,
    },
    {
      "fill": "#009900",
      "labels": [
        "tenant-c-infra",
        "OVN Bridge Mapping",
        "Bridge: ovs-vm",
      ],
      "title": "tenant-c-infra (OVN Bridge Mapping)",
      "x": 920,
      "y": 1340,
    },
    {
      "fill": "#009900",
      "labels": [
        "shared-infra-db",
        "OVN Bridge Mapping",
        "Bridge: ovs-vm",
      ],
      "title": "shared-infra-db (OVN Bridge Mapping)",
      "x": 920,
      "y": 140,
    },
    {
      "fill": "#009900",
      "labels": [
        "tenant-c-primary-db",
        "OVN Bridge Mapping",
        "Bridge: ovs-vm",
      ],
      "title": "tenant-c-primary-db (OVN Bridge Mapping)",
      "x": 920,
      "y": 1440,
    },
    {
      "fill": "#009900",
      "labels": [
        "tenant-c-reporting-db",
        "OVN Bridge Mapping",
        "Bridge: ovs-vm",
      ],
      "title": "tenant-c-reporting-db (OVN Bridge Mapping)",
      "x": 920,
      "y": 1540,
    },
    {
      "fill": "#009900",
      "labels": [
        "tenant-d-app",
        "OVN Bridge Mapping",
        "Bridge: ovs-vm",
      ],
      "title": "tenant-d-app (OVN Bridge Mapping)",
      "x": 920,
      "y": 1640,
    },
    {
      "fill": "#009900",
      "labels": [
        "tenant-d-db",
        "OVN Bridge Mapping",
        "Bridge: ovs-vm",
      ],
      "title": "tenant-d-db (OVN Bridge Mapping)",
      "x": 920,
      "y": 1740,
    },
    {
      "fill": "#009900",
      "labels": [
        "tenant-d-web",
        "OVN Bridge Mapping",
        "Bridge: ovs-vm",
      ],
      "title": "tenant-d-web (OVN Bridge Mapping)",
      "x": 920,
      "y": 1840,
    },
    {
      "fill": "#009900",
      "labels": [
        "tenant-e-desktop04",
        "OVN Bridge Mapping",
        "Bridge: ovs-vm",
      ],
      "title": "tenant-e-desktop04 (OVN Bridge Mapping)",
      "x": 920,
      "y": 1940,
    },
    {
      "fill": "#009900",
      "labels": [
        "tenant-f-epg-svc-business",
        "OVN Bridge Mapping",
        "Bridge: ovs-vm",
      ],
      "title": "tenant-f-epg-svc-business (OVN Bridge Mapping)",
      "x": 920,
      "y": 2040,
    },
    {
      "fill": "#009900",
      "labels": [
        "tenant-f-epg-svc-clearing",
        "OVN Bridge Mapping",
        "Bridge: ovs-vm",
      ],
      "title": "tenant-f-epg-svc-clearing (OVN Bridge Mapping)",
      "x": 920,
      "y": 2140,
    },
    {
      "fill": "#009900",
      "labels": [
        "tenant-f-epg-svc-infra",
        "OVN Bridge Mapping",
        "Bridge: ovs-vm",
      ],
      "title": "tenant-f-epg-svc-infra (OVN Bridge Mapping)",
      "x": 920,
      "y": 2240,
    },
    {
      "fill": "#009900",
      "labels": [
        "tenant-g-epg058-two",
        "OVN Bridge Mapping",
        "Bridge: ovs-vm",
      ],
      "title": "tenant-g-epg058-two (OVN Bridge Mapping)",
      "x": 920,
      "y": 2340,
    },
    {
      "fill": "#009900",
      "labels": [
        "shared-infra-mon",
        "OVN Bridge Mapping",
        "Bridge: ovs-vm",
      ],
      "title": "shared-infra-mon (OVN Bridge Mapping)",
      "x": 920,
      "y": 240,
    },
    {
      "fill": "#009900",
      "labels": [
        "tenant-g-epg143-three",
        "OVN Bridge Mapping",
        "Bridge: ovs-vm",
      ],
      "title": "tenant-g-epg143-three (OVN Bridge Mapping)",
      "x": 920,
      "y": 2440,
    },
    {
      "fill": "#009900",
      "labels": [
        "tenant-g-epg151",
        "OVN Bridge Mapping",
        "Bridge: ovs-vm",
      ],
      "title": "tenant-g-epg151 (OVN Bridge Mapping)",
      "x": 920,
      "y": 2540,
    },
    {
      "fill": "#009900",
      "labels": [
        "tenant-h-vis-app",
        "OVN Bridge Mapping",
        "Bridge: ovs-vm",
      ],
      "title": "tenant-h-vis-app (OVN Bridge Mapping)",
      "x": 920,
      "y": 2640,
    },
    {
      "fill": "#009900",
      "labels": [
        "tenant-h-vis-viewer",
        "OVN Bridge Mapping",
        "Bridge: ovs-vm",
      ],
      "title": "tenant-h-vis-viewer (OVN Bridge Mapping)",
      "x": 920,
      "y": 2740,
    },
    {
      "fill": "#009900",
      "labels": [
        "shared-infra-prov",
        "OVN Bridge Mapping",
        "Bridge: ovs-vm",
      ],
      "title": "shared-infra-prov (OVN Bridge Mapping)",
      "x": 920,
      "y": 340,
    },
    {
      "fill": "#009900",
      "labels": [
        "physnet",
        "OVN Bridge Mapping",
        "Bridge: br-ex",
      ],
      "title": "physnet (OVN Bridge Mapping)",
      "x": 920,
      "y": 40,
    },
    {
      "fill": "#009900",
      "labels": [
        "shared-infra-sec",
        "OVN Bridge Mapping",
        "Bridge: ovs-vm",
      ],
      "title": "shared-infra-sec (OVN Bridge Mapping)",
      "x": 920,
      "y": 440,
    },
    {
      "fill": "#009900",
      "labels": [
        "shared-infra-sys",
        "OVN Bridge Mapping",
        "Bridge: ovs-vm",
      ],
      "title": "shared-infra-sys (OVN Bridge Mapping)",
      "x": 920,
      "y": 540,
    },
    {
      "fill": "#009900",
      "labels": [
        "shared-infra-uc",
        "OVN Bridge Mapping",
        "Bridge: ovs-vm",
      ],
      "title": "shared-infra-uc (OVN Bridge Mapping)",
      "x": 920,
      "y": 640,
    },
    {
      "fill": "#009900",
      "labels": [
        "shared-infra-web",
        "OVN Bridge Mapping",
        "Bridge: ovs-vm",
      ],
      "title": "shared-infra-web (OVN Bridge Mapping)",
      "x": 920,
      "y": 740,
    },
    {
      "fill": "#009900",
      "labels": [
        "tenant-a-infra",
        "OVN Bridge Mapping",
        "Bridge: ovs-vm",
      ],
      "title": "tenant-a-infra (OVN Bridge Mapping)",
      "x": 920,
      "y": 840,
    },
    {
      "fill": "#009900",
      "labels": [
        "tenant-b-app",
        "OVN Bridge Mapping",
        "Bridge: ovs-vm",
      ],
      "title": "tenant-b-app (OVN Bridge Mapping)",
      "x": 920,
      "y": 940,
    },
  ],
}
`;

exports[`NodeVisualization rendered structure drawer content for br-ex (ovs-bridge) 1`] = `
{
  "Overview": "br-exovs-bridgeOverviewRelationshipsConfigTypeovs-bridgeStateupPortsbr-exens192patch-br-ex_cluster_udn_example.p.cudn_worker-1-to-br-intpatch-br-ex_worker-1-to-br-int",
  "Relationships": "br-exovs-bridgeOverviewRelationshipsConfigUpstreamens192 · controller (membership)Downstreamphysnet · bridge-mapping (reference)",
}
`;

exports[`NodeVisualization rendered structure drawer content for ens192 (ethernet) 1`] = `
{
  "Overview": "ens192ethernetOverviewRelationshipsConfigTypeethernetStateupMAC Address02:00:00:00:00:01MTU1500",
  "Relationships": "ens192ethernetOverviewRelationshipsConfigDownstreambr-ex · controller (membership)",
}
`;

exports[`NodeVisualization rendered structure drawer content for example-p-cudn (VRF) 1`] = `
{
  "Overview": "example-p-cudnVRF InterfaceOverviewRelationshipsConfigTypeVRF InterfaceServes Primary Networkinferredexample-p-cudn (ClusterUserDefinedNetwork)MAC Address02:00:00:00:00:06Route Table5775Routes0.0.0.0/0 via 192.0.2.1 dev br-ex169.254.0.3/32 via 10.1.2.1 dev ovn-k8s-mp3169.254.0.16/32 via 0.0.0.0 dev ovn-k8s-mp3172.30.0.0/16 via 169.254.0.4 dev br-exbr-int Portsinferredovn-k8s-mp3 10.1.2.2/24",
  "Relationships": "example-p-cudnVRF InterfaceOverviewRelationshipsConfigDownstreamexample-p-cudn · primary-network (subnet, name) (reference)",
}
`;

exports[`NodeVisualization rendered structure drawer content for machinenet (CUDN) 1`] = `
{
  "Overview": "machinenetLocalnet ClusterUserDefinedNetworkOverviewRelationshipsConfigTypeClusterUserDefinedNetworkTopologyLocalnetRoleSecondaryPhysical NetworkphysnetNamespace Selectornetwork/machine=Namespacesinferreddemo-mirror",
  "Relationships": "machinenetLocalnet ClusterUserDefinedNetworkOverviewRelationshipsConfigUpstreamphysnet · physical-network-name (reference)Downstreammachinenet · attached-namespaces (membership)",
}
`;

exports[`NodeVisualization rendered structure drawer content for machinenet (NAD) 1`] = `
{
  "Overview": "machinenetNetworkAttachmentDefinitionOverviewRelationshipsConfigTypeNetworkAttachmentDefinitionNamespacesinferreddemo-mirrorNetworkAttachmentDefinitionsNo matching NetworkAttachmentDefinition found.",
  "Relationships": "machinenetNetworkAttachmentDefinitionOverviewRelationshipsConfigUpstreammachinenet · attached-namespaces (membership)",
}
`;

exports[`NodeVisualization rendered structure drawer content for physnet (OVN Bridge Mapping) 1`] = `
{
  "Overview": "physnetOVN Bridge MappingOverviewRelationshipsConfigTypeOVN Bridge MappingBridgebr-exReferenced by CUDNsmachinenet",
  "Relationships": "physnetOVN Bridge MappingOverviewRelationshipsConfigUpstreambr-ex · bridge-mapping (reference)Downstreammachinenet · physical-network-name (reference)",
}
`;

exports[`NodeVisualization rendered structure primary-cudn-vrf, all lanes revealed 1`] = `
{
  "edges": [
    "1080,180 -> 700,180  solid  controller",
    "1080,80 -> 700,80  solid  controller",
    "1300,180 -> 1360,180  dashed  physical-network-name",
    "1300,180 -> 1360,280  dashed  physical-network-name",
    "1300,320 -> 1360,380  dashed  primary-network (subnet, name)",
    "1300,80 -> 1360,80  dashed  physical-network-name",
    "1520,180 -> 1580,182  solid  attached-namespaces",
    "1520,380 -> 1580,284  solid  attached-namespaces",
    "1520,80 -> 1580,80  solid  attached-namespaces",
    "200,180 -> 700,80  solid  controller",
    "200,280 -> 480,80  solid  base-iface",
    "200,280 -> 700,180  solid  controller",
    "860,180 -> 1140,180  dashed  bridge-mapping",
    "860,80 -> 1140,80  dashed  bridge-mapping",
  ],
  "laneHeaders": [
    "Physical Interfaces",
    "Bonds",
    "VLAN Interfaces",
    "Bridges",
    "Logical Interfaces",
    "Bridge Mappings",
    "VRFs",
    "Networks",
    "Attachments",
    "Other Interfaces",
  ],
  "nodes": [
    {
      "fill": "#666",
      "labels": [
        "0cb0de1976d0c71",
        "veth",
        "up",
      ],
      "title": "0cb0de1976d0c71 (veth)",
      "x": 0,
      "y": 0,
    },
    {
      "fill": "#009900",
      "labels": [
        "physnet-vmdata",
        "OVN Bridge Mapping",
        "Bridge: br-vmdata",
      ],
      "title": "physnet-vmdata (OVN Bridge Mapping)",
      "x": 1140,
      "y": 140,
    },
    {
      "fill": "#CC6600",
      "labels": [
        "example-p-cudn",
        "VRF",
        "ovn-k8s-mp3 Tbl 5775",
      ],
      "title": "example-p-cudn (VRF)",
      "x": 1140,
      "y": 280,
    },
    {
      "fill": "#009900",
      "labels": [
        "physnet",
        "OVN Bridge Mapping",
        "Bridge: br-ex",
      ],
      "title": "physnet (OVN Bridge Mapping)",
      "x": 1140,
      "y": 40,
    },
    {
      "fill": "#CC0099",
      "labels": [
        "vlan-1924",
        "CUDN",
        "Localnet VLAN 1924",
      ],
      "title": "vlan-1924 (CUDN)",
      "x": 1360,
      "y": 140,
    },
    {
      "fill": "#CC0099",
      "labels": [
        "vlan-1926",
        "CUDN",
        "Localnet VLAN 1926",
      ],
      "title": "vlan-1926 (CUDN)",
      "x": 1360,
      "y": 240,
    },
    {
      "fill": "#CC0099",
      "labels": [
        "example-p-cudn",
        "CUDN",
        "Layer2 10.1.2.0/24",
      ],
      "title": "example-p-cudn (CUDN)",
      "x": 1360,
      "y": 340,
    },
    {
      "fill": "#CC0099",
      "labels": [
        "machinenet",
        "CUDN",
        "Localnet",
      ],
      "title": "machinenet (CUDN)",
      "x": 1360,
      "y": 40,
    },
    {
      "fill": "#F0AB00",
      "labels": [
        "vlan-1924",
        "NAD",
      ],
      "title": "vlan-1924 (NAD)",
      "x": 1580,
      "y": 142,
    },
    {
      "fill": "#F0AB00",
      "labels": [
        "example-p-cudn",
        "NAD",
      ],
      "title": "example-p-cudn (NAD)",
      "x": 1580,
      "y": 244,
    },
    {
      "fill": "#F0AB00",
      "labels": [
        "machinenet",
        "NAD",
      ],
      "title": "machinenet (NAD)",
      "x": 1580,
      "y": 40,
    },
    {
      "fill": "#666",
      "labels": [
        "genev_sys_6081",
        "unknown",
        "ignore",
      ],
      "title": "genev_sys_6081 (unknown)",
      "x": 180,
      "y": 0,
    },
    {
      "fill": "#666",
      "labels": [
        "lo",
        "loopback",
        "up",
      ],
      "title": "lo (loopback)",
      "x": 360,
      "y": 0,
    },
    {
      "fill": "#0066CC",
      "labels": [
        "ens192",
        "ethernet",
        "up",
      ],
      "title": "ens192 (ethernet)",
      "x": 40,
      "y": 140,
    },
    {
      "fill": "#0066CC",
      "labels": [
        "ens224",
        "ethernet",
        "up",
      ],
      "title": "ens224 (ethernet)",
      "x": 40,
      "y": 240,
    },
    {
      "fill": "#0066CC",
      "labels": [
        "ens256",
        "ethernet",
        "down",
      ],
      "title": "ens256 (ethernet)",
      "x": 40,
      "y": 340,
    },
    {
      "fill": "#0066CC",
      "labels": [
        "ens161",
        "ethernet",
        "down",
      ],
      "title": "ens161 (ethernet)",
      "x": 40,
      "y": 40,
    },
    {
      "fill": "#9933CC",
      "labels": [
        "ens224.456",
        "vlan",
        "up",
      ],
      "title": "ens224.456 (vlan)",
      "x": 480,
      "y": 40,
    },
    {
      "fill": "#FF6600",
      "labels": [
        "br-vmdata",
        "ovs-bridge",
        "up",
      ],
      "title": "br-vmdata (ovs-bridge)",
      "x": 700,
      "y": 140,
    },
    {
      "fill": "#FF6600",
      "labels": [
        "br-ex",
        "ovs-bridge",
        "up",
      ],
      "title": "br-ex (ovs-bridge)",
      "x": 700,
      "y": 40,
    },
    {
      "fill": "#0099CC",
      "labels": [
        "ovs-vlan-1920",
        "ovs-interface",
        "up",
      ],
      "title": "ovs-vlan-1920 (ovs-interface)",
      "x": 920,
      "y": 140,
    },
    {
      "fill": "#0099CC",
      "labels": [
        "br-ex",
        "ovs-interface",
        "up",
      ],
      "title": "br-ex (ovs-interface)",
      "x": 920,
      "y": 40,
    },
  ],
}
`;

exports[`NodeVisualization rendered structure primary-cudn-vrf, default view 1`] = `
{
  "edges": [
    "1080,180 -> 1140,182  solid  attached-namespaces",
    "1080,380 -> 1140,284  solid  attached-namespaces",
    "1080,80 -> 1140,80  solid  attached-namespaces",
    "200,180 -> 480,80  solid  controller",
    "200,280 -> 260,80  solid  base-iface",
    "200,280 -> 480,180  solid  controller",
    "640,180 -> 700,180  dashed  bridge-mapping",
    "640,80 -> 700,80  dashed  bridge-mapping",
    "860,180 -> 920,180  dashed  physical-network-name",
    "860,180 -> 920,280  dashed  physical-network-name",
    "860,320 -> 920,380  dashed  primary-network (subnet, name)",
    "860,80 -> 920,80  dashed  physical-network-name",
  ],
  "laneHeaders": [
    "Physical Interfaces",
    "VLAN Interfaces",
    "Bridges",
    "Bridge Mappings",
    "VRFs",
    "Networks",
    "Attachments",
    "Other Interfaces",
  ],
  "nodes": [
    {
      "fill": "#666",
      "labels": [
        "0cb0de1976d0c71",
        "veth",
        "up",
      ],
      "title": "0cb0de1976d0c71 (veth)",
      "x": 0,
      "y": 0,
    },
    {
      "fill": "#F0AB00",
      "labels": [
        "vlan-1924",
        "NAD",
      ],
      "title": "vlan-1924 (NAD)",
      "x": 1140,
      "y": 142,
    },
    {
      "fill": "#F0AB00",
      "labels": [
        "example-p-cudn",
        "NAD",
      ],
      "title": "example-p-cudn (NAD)",
      "x": 1140,
      "y": 244,
    },
    {
      "fill": "#F0AB00",
      "labels": [
        "machinenet",
        "NAD",
      ],
      "title": "machinenet (NAD)",
      "x": 1140,
      "y": 40,
    },
    {
      "fill": "#666",
      "labels": [
        "genev_sys_6081",
        "unknown",
        "ignore",
      ],
      "title": "genev_sys_6081 (unknown)",
      "x": 180,
      "y": 0,
    },
    {
      "fill": "#9933CC",
      "labels": [
        "ens224.456",
        "vlan",
        "up",
      ],
      "title": "ens224.456 (vlan)",
      "x": 260,
      "y": 40,
    },
    {
      "fill": "#666",
      "labels": [
        "lo",
        "loopback",
        "up",
      ],
      "title": "lo (loopback)",
      "x": 360,
      "y": 0,
    },
    {
      "fill": "#0066CC",
      "labels": [
        "ens192",
        "ethernet",
        "up",
      ],
      "title": "ens192 (ethernet)",
      "x": 40,
      "y": 140,
    },
    {
      "fill": "#0066CC",
      "labels": [
        "ens224",
        "ethernet",
        "up",
      ],
      "title": "ens224 (ethernet)",
      "x": 40,
      "y": 240,
    },
    {
      "fill": "#0066CC",
      "labels": [
        "ens256",
        "ethernet",
        "down",
      ],
      "title": "ens256 (ethernet)",
      "x": 40,
      "y": 340,
    },
    {
      "fill": "#0066CC",
      "labels": [
        "ens161",
        "ethernet",
        "down",
      ],
      "title": "ens161 (ethernet)",
      "x": 40,
      "y": 40,
    },
    {
      "fill": "#FF6600",
      "labels": [
        "br-vmdata",
        "ovs-bridge",
        "up",
      ],
      "title": "br-vmdata (ovs-bridge)",
      "x": 480,
      "y": 140,
    },
    {
      "fill": "#FF6600",
      "labels": [
        "br-ex",
        "ovs-bridge",
        "up",
      ],
      "title": "br-ex (ovs-bridge)",
      "x": 480,
      "y": 40,
    },
    {
      "fill": "#009900",
      "labels": [
        "physnet-vmdata",
        "OVN Bridge Mapping",
        "Bridge: br-vmdata",
      ],
      "title": "physnet-vmdata (OVN Bridge Mapping)",
      "x": 700,
      "y": 140,
    },
    {
      "fill": "#CC6600",
      "labels": [
        "example-p-cudn",
        "VRF",
        "ovn-k8s-mp3 Tbl 5775",
      ],
      "title": "example-p-cudn (VRF)",
      "x": 700,
      "y": 280,
    },
    {
      "fill": "#009900",
      "labels": [
        "physnet",
        "OVN Bridge Mapping",
        "Bridge: br-ex",
      ],
      "title": "physnet (OVN Bridge Mapping)",
      "x": 700,
      "y": 40,
    },
    {
      "fill": "#CC0099",
      "labels": [
        "vlan-1924",
        "CUDN",
        "Localnet VLAN 1924",
      ],
      "title": "vlan-1924 (CUDN)",
      "x": 920,
      "y": 140,
    },
    {
      "fill": "#CC0099",
      "labels": [
        "vlan-1926",
        "CUDN",
        "Localnet VLAN 1926",
      ],
      "title": "vlan-1926 (CUDN)",
      "x": 920,
      "y": 240,
    },
    {
      "fill": "#CC0099",
      "labels": [
        "example-p-cudn",
        "CUDN",
        "Layer2 10.1.2.0/24",
      ],
      "title": "example-p-cudn (CUDN)",
      "x": 920,
      "y": 340,
    },
    {
      "fill": "#CC0099",
      "labels": [
        "machinenet",
        "CUDN",
        "Localnet",
      ],
      "title": "machinenet (CUDN)",
      "x": 920,
      "y": 40,
    },
  ],
}
`;
